<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddNewRecipe"
    tools:ignore="LabelFor" >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/new_recipe_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:background="@color/background">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/name_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/recipe_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:padding="5dp"
                android:text="@string/recipe_name"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/name_input"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/recipe_name"
                android:ems="9"
                android:inputType="text"
                android:importantForAutofill="no"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/image_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/name_layout"
            android:padding="15dp">

            <ImageView
                android:id="@+id/image_view"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                app:layout_constraintDimensionRatio="1:1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:padding="5dp"
                android:visibility="gone" />

            <Button
                android:id="@+id/image_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="@+id/image_view"
                app:layout_constraintEnd_toEndOf="@+id/image_view"
                app:layout_constraintTop_toBottomOf="@+id/image_view"
                android:text="@string/add_image"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/ingredient_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/image_layout"
            android:layout_marginTop="16dp"
            android:animateLayoutChanges="true">

            <TextView
                android:id="@+id/amount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:padding="5dp"
                android:text="@string/amount_view"
                android:textSize="20sp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/unit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toEndOf="@+id/amount"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginStart="36dp"
                android:padding="5dp"
                android:text="@string/unit_view"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/ingredient"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toEndOf="@+id/unit"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginStart="42dp"
                android:padding="5dp"
                android:text="@string/ingredient_view"
                android:textSize="20sp"
                android:textStyle="bold" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/input_row1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/amount">

                <EditText
                    android:id="@+id/amount_input1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:ems="4"
                    android:inputType="numberDecimal"
                    android:importantForAutofill="no" />

                <EditText
                    android:id="@+id/unit_input1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_marginStart="115dp"
                    android:ems="3"
                    android:importantForAutofill="no"
                    android:inputType="text" />

                <EditText
                    android:id="@+id/ingredient_input1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_marginStart="205dp"
                    android:ems="7"
                    android:importantForAutofill="no"
                    android:inputType="text"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/button_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/input_row1">

                <Button
                    android:id="@+id/remove_ingredient"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/remove_string"
                    android:textSize="25sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toStartOf="@+id/add_ingredient"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <Button
                    android:id="@+id/add_ingredient"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/add_string"
                    android:textSize="25sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/remove_ingredient"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/recipe_times"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ingredient_layout">

            <TextView
                android:id="@+id/prep_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:padding="5dp"
                android:text="@string/prep_time_view"
                android:textSize="17sp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/cook_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toEndOf="@+id/prep_time"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginStart="20dp"
                android:padding="5dp"
                android:text="@string/cook_time_view"
                android:textSize="17sp"
                android:textStyle="bold"/>

            <EditText
                android:id="@+id/prep_input"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="25dp"
                app:layout_constraintTop_toBottomOf="@+id/cook_time"
                app:layout_constraintEnd_toStartOf="@id/cook_time"
                android:layout_marginStart="5dp"
                android:ems="4"
                android:inputType="none"
                android:importantForAutofill="no"/>

            <EditText
                android:id="@+id/cook_input"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/cook_time"
                app:layout_constraintStart_toStartOf="@+id/cook_time"
                android:layout_marginStart="5dp"
                android:ems="4"
                android:inputType="none"
                android:importantForAutofill="no"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/recipe_times"
            android:layout_marginTop="16dp"
            android:padding="5dp"
            android:text="@string/recipe_description_view"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/description_input"
            android:layout_width="match_parent"
            app:layout_constraintTop_toBottomOf="@+id/description"
            android:layout_height="250dp"
            android:ems="10"
            android:gravity="start|top"
            android:inputType="textMultiLine"
            android:importantForAutofill="no"/>

        <Button
            android:id="@+id/save_recipe"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/description_input"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:text="@string/save_string"
            android:textStyle="bold" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>