<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:id="@+id/display_recipe_card"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DisplayRecipe"
    android:background="@color/background">

   <androidx.constraintlayout.widget.ConstraintLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content">

       <ImageView
           android:id="@+id/image_display"
           android:layout_width="match_parent"
           android:layout_height="0dp"
           app:layout_constraintDimensionRatio="1:1"
           app:layout_constraintTop_toTopOf="parent"
           app:layout_constraintStart_toStartOf="parent"
           android:scaleType="centerCrop"
           android:visibility="gone"/>

       <androidx.constraintlayout.widget.ConstraintLayout
           android:layout_width="match_parent"
           android:layout_height="match_parent"
           app:layout_constraintStart_toStartOf="parent"
           app:layout_constraintTop_toBottomOf="@id/image_display">

           <LinearLayout
               android:id="@+id/name_display_layout"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               app:layout_constraintStart_toStartOf="parent"
               app:layout_constraintTop_toTopOf="parent"
               android:orientation="horizontal"
               android:background="@color/dark_green">

               <TextView
                   android:id="@+id/name_display"
                   android:layout_width="0dp"
                   android:layout_height="wrap_content"
                   android:padding="15dp"
                   android:text="Recipe Name Goes here!"
                   android:textSize="25sp"
                   android:textStyle="bold"
                   android:layout_weight="1"
                   android:layout_gravity="center_vertical" />

               <androidx.constraintlayout.widget.ConstraintLayout
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content">

                   <ImageView
                       android:id="@+id/not_favourite"
                       android:layout_width="60dp"
                       android:layout_height="60dp"
                       android:padding="10dp"
                       app:layout_constraintTop_toTopOf="parent"
                       app:layout_constraintEnd_toEndOf="parent"
                       app:srcCompat="@drawable/unfilled_heart"
                       android:layout_gravity="top"/>

                   <ImageView
                       android:id="@+id/favourite"
                       android:layout_width="60dp"
                       android:layout_height="60dp"
                       android:padding="10dp"
                       android:layout_gravity="top"
                       android:alpha="0"
                       app:layout_constraintEnd_toEndOf="parent"
                       app:layout_constraintTop_toTopOf="parent"
                       app:srcCompat="@drawable/filled_heart" />

               </androidx.constraintlayout.widget.ConstraintLayout>

           </LinearLayout>

           <androidx.constraintlayout.widget.ConstraintLayout
               android:id="@+id/display_constraint"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               app:layout_constraintTop_toBottomOf="@+id/name_display_layout"
               app:layout_constraintStart_toStartOf="parent"
               android:padding="10dp">

               <TextView
                   android:id="@+id/recipe_tag"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   app:layout_constraintStart_toStartOf="parent"
                   app:layout_constraintTop_toTopOf="parent"
                   android:padding="5dp"
                   android:text="@string/recipe_display"
                   android:textSize="20sp"
                   android:textStyle="bold" />

               <androidx.constraintlayout.widget.ConstraintLayout
                   android:id="@+id/ingredient_row_display"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   app:layout_constraintStart_toStartOf="parent"
                   app:layout_constraintTop_toBottomOf="@id/recipe_tag">

                   <TextView
                       android:id="@+id/amount_display"
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:layout_marginStart="5dp"
                       android:text=""
                       android:textSize="19sp"
                       app:layout_constraintStart_toStartOf="parent"
                       app:layout_constraintTop_toTopOf="parent" />

                   <TextView
                       android:id="@+id/ingredient_display"
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:layout_marginStart="5dp"
                       android:text="TextView"
                       android:textSize="19sp"
                       app:layout_constraintStart_toEndOf="@+id/amount_display"
                       app:layout_constraintTop_toTopOf="parent" />

               </androidx.constraintlayout.widget.ConstraintLayout>

               <androidx.constraintlayout.widget.ConstraintLayout
                   android:id="@+id/time_row"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   app:layout_constraintStart_toStartOf="parent"
                   app:layout_constraintTop_toBottomOf="@+id/ingredient_row_display"
                   android:layout_marginStart="5dp">

                   <TextView
                       android:id="@+id/prep_time_tag"
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       app:layout_constraintStart_toStartOf="parent"
                       app:layout_constraintTop_toTopOf="parent"
                       android:text="@string/prep_time_display"
                       android:textSize="17sp"
                       android:textStyle="bold"
                       android:visibility="gone"/>

                   <TextView
                       android:id="@+id/prep_time_display"
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       app:layout_constraintStart_toEndOf="@id/prep_time_tag"
                       app:layout_constraintTop_toTopOf="parent"
                       android:textSize="17sp"
                       android:visibility="gone"/>

                   <TextView
                       android:id="@+id/cook_time_tag"
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       app:layout_constraintStart_toStartOf="@id/prep_time_tag"
                       app:layout_constraintTop_toBottomOf="@id/prep_time_tag"
                       android:text="@string/cook_time_display"
                       android:textSize="17sp"
                       android:textStyle="bold"
                       android:visibility="gone"/>

                   <TextView
                       android:id="@+id/cook_time_display"
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       app:layout_constraintStart_toEndOf="@id/cook_time_tag"
                       app:layout_constraintTop_toBottomOf="@id/prep_time_display"
                       android:textSize="17sp"
                       android:visibility="gone"/>


               </androidx.constraintlayout.widget.ConstraintLayout>

               <TextView
                   android:id="@+id/description_tag"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   app:layout_constraintTop_toBottomOf="@id/time_row"
                   app:layout_constraintStart_toStartOf="parent"
                   android:padding="5dp"
                   android:text="@string/recipe_description_display"
                   android:textSize="20sp"
                   android:textStyle="bold"/>

               <TextView
                   android:id="@+id/description_display"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   app:layout_constraintStart_toStartOf="parent"
                   app:layout_constraintTop_toBottomOf="@+id/description_tag"
                   android:layout_marginStart="5dp"
                   android:text="TextView" />

           </androidx.constraintlayout.widget.ConstraintLayout>

       </androidx.constraintlayout.widget.ConstraintLayout>

   </androidx.constraintlayout.widget.ConstraintLayout>


</ScrollView>